--- a/app.yaml
+++ b/app.yaml
@@ -15,3 +15,7 @@ handlers:
 libraries:
 - name: webapp2
   version: "2.5.2"
+- name: jinja2
+  version: "2.6"
+- name: markupsafe
+  version: "0.15"
