--- a/index.yaml
+++ b/index.yaml
@@ -14,3 +14,8 @@ indexes:
   properties:
   - name: __key__
     direction: desc
+
+- kind: Room
+  properties:
+  - name: __key__
+    direction: desc
